--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 
 <html>
+<style>
+   div, span {
+  background-color: blue;
+} 
+</style>
  <head>
-    <title>Hello Coursera!</title>
+     <meta charset="utf-8">
+    <title>Coursera is cool!</title>
  </head>
  <body>
-     <h1>Hello Coursera! It's a great course</h1>
- </body>   
+    <div>Hello</div>
+    <span>World!</span>
+  </body> 
 </html>
