--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -6,7 +6,7 @@
 <!--Get Style Sheet-->
 <link rel="stylesheet" href="css/styles.css">
 
-<title>Responsive Layout</title>
+<title>Our Menu </title>
 </head>
 <body>
 <div class="header">
